@@ -10,6 +10,7 @@
   * API and ABI changed:
     - REMOVED callback enumeration.
     - REMOVED kdump_read_reg (use attributes).
+    - REMOVED kdump_fdopen
     - CHANGED the canonical architecture name from "i386" to "ia32".
 
 0.2.0
